logoutput/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-svc
spec:
  type: ClusterIP
  selector:
    app: logoutput-split
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3000
